# discmod

./: .coverage  .env.example  .gitignore  CLAUDE.md  README.md  flake.nix  pyproject.toml
.claude/: settings.local.json
deploy/: discmod.service
nix/: module.nix
scripts/: smoke.py
src/discmod/: config.py  conflicts.py  db.py  git_ops.py  llm.py  main.py  merge.py  models.py  modrinth.py  packwiz.py  release.py
src/discmod/commands/: pack.py  propose.py  reactions.py
tests/: test_config.py  test_conflicts.py  test_db.py  test_git_ops.py  test_llm.py  test_merge.py  test_modrinth.py  test_packwiz.py  test_release.py
tests/fixtures/: batch_projects.json  sodium_project.json  sodium_versions_fabric_1211.json
